--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,12 @@ html {
 }
 
 .masthead {
-
+  background: #588477;
+  color: #fff;
+  background-image: url("../images/leaf-bg.svg");
+  background-repeat: repeat;
+  border-top: 3px solid #2d5a4d;
+  border-bottom: 3px solid #2d5a4d;
 }
 
 .logo {
@@ -16,6 +21,10 @@ html {
 
 .nav a {
   text-decoration: none;
+  color: #fff;
+  background-color: #467366;
+  border: 3px solid #2d5a4d;
+  border-radius: 10px;
 }
 
 .nav a:hover {
