--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ html {
   color: #fff;
   background-image: url("../images/leaf-bg.svg");
   background-repeat: repeat;
+  background-size: 64px;
   border-top: 3px solid #2d5a4d;
   border-bottom: 3px solid #2d5a4d;
 }
@@ -24,15 +25,15 @@ html {
   color: #fff;
   background-color: #467366;
   border: 3px solid #2d5a4d;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .nav a:hover {
-
+  background-color: #145b1d;
 }
 
 .banner {
-
+  background-image: url("../images/banner.jpg");
 }
 
 .banner-content {
