--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ html {
 
 .banner {
   color: #fff;
-  background-image: url("..images/banner.jpg");
+  background-image: url("../images/banner.jpg");
   background-repeat: no-repeat;
   background-position: center;
   border-bottom: 3px solid #2d5a4d;
