--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,9 @@ html {
 }
 
 .banner-content {
-
+  background-image: url("../images/two-leaves.svg");
+  background-repeat: no-repeat;
+  padding-top: 15em;
 }
 
 @media only screen and (min-width: 60em) {
