--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ html {
 
 .banner {
   color: #fff;
-  background-image: url("../images/banner.jpg");
+  background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0) 70%, rgba(16, 52, 41, .8) ), url("../images/banner.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
