--- a/css/main.css
+++ b/css/main.css
@@ -57,10 +57,11 @@ html {
 
   .banner-content {
     background-position: .75em 10em;
-    padding-top: 16em;
+    padding-top: 16.5em;
   }
 
 }
+
 @media only screen and (min-width: 60em) {
 
   .logo {
@@ -80,4 +81,12 @@ html {
     padding-top: 15.5em;
   }
 
+@media only screen and (min-width: 90em) {
+
+  .banner-content {
+    background-position: .75em 8.5em;
+    padding: top: 14.5em;
+  }
+
+}
 }
