Correct error on 90em media query

--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ html {
 
   .banner-content {
     background-position: .75em 8.5em;
-    padding: top: 14.5em;
+    padding-top: 14.5em;
   }
 
 }
